arrs/readarr/patch.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deploy
  namespace: arr
spec:
  selector:
    matchLabels:
      app: readarr 
  template:
    metadata:
      labels:
        app: readarr
    spec:
      containers:
      - name: arr-pod
        image: ghcr.io/hotio/readarr
        ports:
        - containerPort: 8787
          name: http
        volumeMounts:
        - name: downloads
          mountPath: /downloads
        - name: config 
          mountPath: /config
      volumes:
      - name: config
        hostPath:
          path: /opt/mediaservices/readarr
      - name: downloads 
        hostPath:
          path: /mnt/downloads
---
